force-app/main/default/objects/QB_Invoice_Line_Item__c/QB_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>QB Invoice Line Item</label>
    <nameField>
        <label>QB Invoice Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Invoice Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>