force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Line Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>