force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name__c</fullName>
    <label>Product/Service Ref Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>