force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product/Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>QB Invoice Line Items</relationshipLabel>
    <relationshipName>QB_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>