force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/QB_Invoice__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QB Invoice</label>
    <referenceTo>QB_Invoice__c</referenceTo>
    <relationshipLabel>QB Invoice Line Items</relationshipLabel>
    <relationshipName>QB_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>