force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <label>Taxable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>