force-app/main/default/objects/QB_Invoice_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Line_Item_Id__c</columns>
    <columns>Line_Item_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>QB_Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>